Fix z-index

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ h2, h3, h4, .ftn {
   top: 0; left: 0; right: 0;
   height: 46px;
   opacity: 0.8;
-  z-index: 9999;
+  z-index: 999999;
   margin: 0;
 }
 
